--- a/app/src/main/resources/fx_screens/mainWindow.fxml
+++ b/app/src/main/resources/fx_screens/mainWindow.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="629.0" maxWidth="1137.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="629.0" prefWidth="1137.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.MainWindowController">
+<AnchorPane maxHeight="629.0" maxWidth="1137.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="629.0" prefWidth="1137.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.MainWindowController">
    <children>
       <ImageView fx:id="animatedImageView" fitHeight="249.0" fitWidth="332.0" layoutX="808.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -115,7 +115,7 @@
             </Pane>
          </children>
       </Pane>
-      <Pane layoutX="808.0" layoutY="166.0" prefHeight="450.0" prefWidth="302.0" style="-fx-background-color: #131F5A; -fx-background-radius: 20;">
+      <Pane layoutX="808.0" layoutY="166.0" prefHeight="450.0" prefWidth="302.0" style="-fx-background-color: #102043; -fx-background-radius: 20;">
          <children>
             <ImageView fitHeight="85.0" fitWidth="111.0" layoutX="-29.0" layoutY="-26.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -132,11 +132,77 @@
                   <Rectangle fx:id="scrollRectangle1" arcHeight="5.0" arcWidth="5.0" fill="#0a2a85" height="8.0" layoutX="6.0" layoutY="3.0" strokeType="INSIDE" width="51.0" />
                </children>
             </Pane>
-            <Button fx:id="scrollButton1" layoutX="255.0" layoutY="18.0" mnemonicParsing="false" style="-fx-background-color: #14165A;" text="&gt;" textFill="WHITE">
+            <Button fx:id="scrollButton1" layoutX="255.0" layoutY="18.0" mnemonicParsing="false" onAction="#scrollUpdate" style="-fx-background-color: #0F1E40;" text="&gt;" textFill="WHITE">
                <font>
                   <Font name="Manrope Bold" size="20.0" />
                </font>
             </Button>
+            <Pane fx:id="paneUpdate1" layoutX="11.0" layoutY="93.0" prefHeight="347.0" prefWidth="282.0">
+               <children>
+                  <ImageView fitHeight="303.0" fitWidth="302.0" layoutX="-11.0" layoutY="55.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../images/GroupUpdate.png" />
+                     </image>
+                  </ImageView>
+                  <Label layoutX="118.0" layoutY="43.0" text="Новый дизайн" textFill="WHITE">
+                     <font>
+                        <Font name="Manrope SemiBold" size="18.0" />
+                     </font>
+                  </Label>
+               </children>
+            </Pane>
+            <Pane fx:id="paneUpdate2" layoutX="11.0" layoutY="125.0" prefHeight="314.0" prefWidth="273.0" visible="false">
+               <children>
+                  <Label text="Загрузка лекций с МУДЛА" textFill="WHITE">
+                     <font>
+                        <Font name="Manrope SemiBold" size="18.0" />
+                     </font>
+                  </Label>
+                  <ImageView fitHeight="293.0" fitWidth="302.0" layoutX="-11.0" layoutY="35.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../images/Moodle.png" />
+                     </image>
+                  </ImageView>
+               </children>
+            </Pane>
+            <Pane fx:id="paneUpdate3" layoutX="1.0" layoutY="86.0" prefHeight="361.0" prefWidth="302.0" visible="false">
+               <children>
+                  <ImageView fitHeight="291.0" fitWidth="301.0" layoutY="116.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../images/Queue.png" />
+                     </image>
+                  </ImageView>
+                  <Label layoutX="63.0" layoutY="42.0" text="Очередь обработок" textFill="WHITE">
+                     <font>
+                        <Font name="Manrope SemiBold" size="18.0" />
+                     </font>
+                  </Label>
+               </children>
+            </Pane>
+            <Pane fx:id="paneUpdate4" layoutY="79.0" prefHeight="377.0" prefWidth="302.0" visible="false">
+               <children>
+                  <ImageView fitHeight="314.0" fitWidth="301.0" layoutX="1.0" layoutY="78.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../images/Tabs.png" />
+                     </image>
+                  </ImageView>
+                  <Label layoutX="14.0" layoutY="2.0" text="Возможность работать" textFill="WHITE">
+                     <font>
+                        <Font name="Manrope SemiBold" size="18.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="94.0" layoutY="27.0" text="СРАЗУ с несколькими" textFill="WHITE">
+                     <font>
+                        <Font name="Manrope SemiBold" size="18.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="14.0" layoutY="52.0" text="стенограммами" textFill="WHITE">
+                     <font>
+                        <Font name="Manrope SemiBold" size="18.0" />
+                     </font>
+                  </Label>
+               </children>
+            </Pane>
          </children>
       </Pane>
       <Label layoutX="49.0" layoutY="39.0" text="Добро пожаловать!">
